# visionsense-studio

./: .env.example  .gitignore  .mcp.json  OVERVIEW.md  PLAN.md  PROGRESS.md  README.md  STATUS.md  auto.crt  auto.key  benchmark_deepstream.csv  benchmark_deepstream_nvr.csv  benchmark_deepstream_nvr_state.json  benchmark_deepstream_state.json  benchmark_scale.csv  benchmark_verticals.csv  combinations.csv  docker-compose.mac.yml  docker-compose.yml  gpu_calculator.html  nginx.conf  pyproject.toml  report.html  report_template.html  requirements.txt  start.sh
backend/: Dockerfile  requirements.txt
config/: cameras.yaml  settings.yaml
dashboard/: README.md  package-lock.json  package.json
data/: calibration.json  gpus.json
deploy/: install_service.sh  mediamtx.yml  mediamtx_multi.yml  mediamtx_web.yml  visionsense.service
docker/: Dockerfile  docker-compose.yml
docs/: GPU_SIZING_PLAN.md  GPU_SIZING_RESULTS.md  MEDIA_ARCHITECTURE.md  architecture.md  builder-spec.md  deepstream-agent-cookbook.md  deepstream-benchmark-report.md  deepstream-evaluation.md  deepstream-mcp-and-development.md  frameinsight-platform-architecture.md  quote-sheet.md  research-prompt.md  usage.md
frameinsight/: __init__.py  cli.py  dispatch.py  geometry.py  replay.py  runtime.py  sinks.py  siteconfig.py  types.py  zones.py
frontend/: Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
host-inference/: requirements.txt  server.py  start.sh
media-agent/: CMakeLists.txt  README.md
media-agent/include/visionsense/: capabilities.hpp  http_server.hpp  pipeline_manager.hpp
media-agent/src/: capabilities.cpp  http_server.cpp  main.cpp  pipeline_manager.cpp
phone-detection-main/: .gitignore  Dockerfile  README.md  app.py  camera.py  detect.py  detector.py  docker-compose.yml  state.json  state.py  tracker.py
scripts/: bench_infer_ladder.py  benchmark.py  benchmark_csv.py  benchmark_deepstream.py  benchmark_live.py  benchmark_mixed.py  benchmark_nvr_ceiling.py  benchmark_scale.py  benchmark_stress.py  benchmark_verticals.py  build-media-agent.sh  build_engine_from_onnx.py  build_model.py  diagnose.sh  export_model.py  gpu_resume.sh  install-media-deps-macos.sh  install-media-deps-ubuntu.sh  install-production-macos.sh  install-production-ubuntu.sh  make_test_video.py  probe_cameras.py  run-media-agent.sh  run_edge.sh  run_live_x50.sh  setup_gpu.sh  smoke_test.py  start_multipath_relay.sh  validate_usecases.py
src/: api.py  config.py  main.py  pipeline.py  types.py  viz.py  zones.py
tests/: test_desk_occupancy.py  test_geometry.py  (+6 more)
(+214 files in other folders)
